--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,10 @@ language: common-lisp
 env:
   matrix:
     - LISP=sbcl
-    - LISP=ccl
-    - LISP=clisp
+#    - LISP=ccl
+#    - LISP=clisp
 
 install:
   - curl https://raw.githubusercontent.com/luismbo/cl-travis/master/install.sh | bash
 
-script:
-  - "cl -l prove
-        -e '(or (every (function identity)
-                       (list (prove:run :ryeboy)))
-                (uiop:quit -1))'"
+script: "make test"
