--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ env:
 
 install:
   - curl https://raw.githubusercontent.com/luismbo/cl-travis/master/install.sh | bash
+  - wget http://aphyr.com/riemann/riemann_0.2.7_all.deb
+  - sudo dpkg -i riemann_0.2.7_all.deb
+  - sudo service riemann start
 
 script: "sbcl --eval '(progn (ql:update-all-dists :prompt nil) (ql:quickload :prove) (ql:quickload :ryeboy))' --quit && make test"
